# warpforge

./: .gitignore  CMakeLists.txt  README.md
miniptx-visualizer/: package-lock.json  package.json
miniptx-visualizer/app/: globals.css  layout.tsx  page.tsx
miniptx-visualizer/app/api/compile/: route.ts
miniptx-visualizer/components/editor/: CodeEditor.tsx
miniptx-visualizer/components/pipeline/: PipelineNav.tsx
miniptx-visualizer/components/pipeline/stages/: ASTView.tsx  IROptView.tsx  IRView.tsx  PTXView.tsx  RegAllocView.tsx  TokensView.tsx
miniptx-visualizer/lib/: api.ts  examples.ts  mockData.ts  types.ts
miniptx-visualizer/store/: usePipelineStore.ts
src/: ast.hpp  codegen.cpp  codegen.hpp  ir.cpp  ir.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  regalloc.cpp  regalloc.hpp  sema.cpp  sema.hpp  token.hpp
src/passes/: const_fold.cpp  const_fold.hpp  cse.cpp  cse.hpp  dce.cpp  dce.hpp
tests/: scalar_mul.ptxc  validate.cu  vec_add.ptx  vec_add.ptxc
